<resources>
    <string name="app_name">Recout</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="error_email">Email Not Match!</string>
    <string name="min_length">Minimum Is %1$d Character!</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="product_image_desc">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="city">City</string>
    <string name="usage">Usage</string>
    <string name="temperatur">Temperature</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="App_name">Recout</string>
    <string name="from">from</string>
    <string name="team">C241-PS139</string>
</resources>